[gd_scene load_steps=4 format=3 uid="uid://b8xlbtd5arw1"]

[ext_resource type="Script" path="res://game.gd" id="1_3dlen"]
[ext_resource type="PackedScene" uid="uid://c8d3ef1nbnfpj" path="res://wallet.tscn" id="1_6b0xb"]
[ext_resource type="Script" path="res://Label.gd" id="2_h2gal"]

[node name="Game" type="Node2D"]
script = ExtResource("1_3dlen")

[node name="Wallet" parent="." instance=ExtResource("1_6b0xb")]
unique_name_in_owner = true
value = 250

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1156.0
offset_bottom = 653.0

[node name="Plus Button" type="Button" parent="UI"]
layout_mode = 0
offset_left = 313.0
offset_top = 271.0
offset_right = 430.0
offset_bottom = 302.0
text = "MONEY GO IN"

[node name="Minus Button" type="Button" parent="UI"]
layout_mode = 0
offset_left = 560.0
offset_top = 268.0
offset_right = 693.0
offset_bottom = 299.0
text = "MONEY GO OUT"

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 460.0
offset_top = 150.0
offset_right = 500.0
offset_bottom = 173.0
script = ExtResource("2_h2gal")

[node name="BillsTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="value_increased" from="Wallet" to="." method="_on_wallet_value_increased"]
[connection signal="pressed" from="UI/Plus Button" to="." method="_on_plus_button_pressed"]
[connection signal="pressed" from="UI/Minus Button" to="." method="_on_minus_button_pressed"]
[connection signal="timeout" from="BillsTimer" to="." method="_on_bills_timer_timeout"]
